--- a/src/main/resources/templates/playlistPage.html
+++ b/src/main/resources/templates/playlistPage.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta username="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Álbum Musical</title>
     <link rel="stylesheet" href="/css/Common.css">
     <link rel="stylesheet" href="/css/PlaylistPage.css">
@@ -14,18 +14,18 @@
 </style>
 <body>
 <header>
-    <img src="/img/icons/Logo-ConFondol.png" alt="header-logo" class="logo">
+    <img src="/img/Logo-ConFondol.png" alt="header-logo" class="logo">
     <div class="barra">
-        <img src="/img/icons/lupa-gray.png" alt="" class="dualupa">
+        <img src="/img/lupa-gray.png" alt="" class="dualupa">
         <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?" onfocus="this.placeholder=''" onblur="this.placeholder='¿Qué te apetece escuchar?'">
-        <img src="/img/icons/libro-gray.png" alt="" class="libro">
+        <img src="/img/libro-gray.png" alt="" class="libro">
     </div>
-    <img src="/img/icons/icon.svg" alt="" class="icono">
+    <img src="/img/icon.svg" alt="" class="icono">
 </header>
 <main>
     <div class="album-container">
         <div class="album-header">
-            <img src="/img/examples/cover8.jpg" alt="Portada del álbum" class="album-cover">
+            <img src="/img/cover8.jpg" alt="Portada del álbum" class="album-cover">
             <div class="album-info">
                 <h1>Midnight memories</h1>
                 <div class="artist-info">
@@ -72,9 +72,9 @@
     </div>
 </main>
 <footer>
-    <img src="/img/icons/search.svg" alt="" srcset="">
-    <img src="/img/icons/icon.svg" alt="">
-    <img src="/img/icons/home.svg">
+    <img src="/img/search.svg" alt="" srcset="">
+    <img src="/img/icon.svg" alt="">
+    <img src="/img/home.svg">
 </footer>
 </body>
 </html>
