--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,9 @@
-<header th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
+<header>
   <img src="/img/icons/Logo-ConFondol.png" alt="header-logo" class="logo">
-  <img src="/img/icons/search.svg" alt="" srcset="">
-  <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?">
-  <img src="/img/icons/icon.svg" alt="">
-  <div class="header-hr"></div>
+  <div class="barra">
+    <img src="/img/icons/lupa-gray.png" alt="" class="dualupa">
+    <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?" onfocus="this.placeholder=''" onblur="this.placeholder='¿Qué te apetece escuchar?'">
+    <img src="/img/icons/libro-gray.png" alt="" class="libro">
+  </div>
+  <img src="/img/icons/icon.svg" alt="" class="icono">
 </header>
